length adjust to avoid page jump

--- a/src/components/ArtistsGrid/artists-grid.css
+++ b/src/components/ArtistsGrid/artists-grid.css
@@ -1,5 +1,5 @@
 .artistsGridContainer {
-  min-height: 30vh;
+  min-height: 100vh;
 }
 .artistsGrid {
   font-family: 'Montserrat';
